apps/varnish/app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: varnish
spec:
  rules:
  - host: bazarr.infra.arleskog.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish
            port:
              number: 80
  - host: prowlarr.infra.arleskog.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish
            port:
              number: 80
  - host: radarr.infra.arleskog.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish
            port:
              number: 80
  - host: sonarr.infra.arleskog.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: varnish
spec:
  selector:
    app: varnish
  ports:
  - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: varnish
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
      - name: varnish
        image: varnish:7.2.1
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/varnish/default.vcl
          name: config
          subPath: default.vcl
      volumes:
        - name: config
          configMap:
            name: varnish
